--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,7 +95,8 @@ h4 {
   @apply font-medium;
 }
 
-.prose p {
+.prose p,
+.prose li {
   /* Override removing top margin, causing layout shift */
   margin-top: 1.25em !important;
   margin-bottom: 1.25em !important;
@@ -168,7 +169,7 @@ table {
     --input: 20 5.9% 90%;
     --ring: 20 14.3% 4.1%;
 
-    --radius: 0.3rem;
+    --radius: 0.5rem;
   }
 
   .dark {
