--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,6 +135,33 @@ pre {
   text-wrap: balance;
 }
 
+.patchnotes strong {
+  font-weight: bold;
+}
+
+.patchnotes ul {
+  vertical-align: top; /* Align list items vertically */
+  margin-left: 1.25rem;
+  list-style-type: disc;
+  list-style-position: outside;
+  margin-top: 0em !important;
+  margin-bottom: 0em !important;
+}
+
+.patchnotes ol {
+  list-style-type: decimal;
+  list-style-position: inside;
+  margin-top: 0em !important;
+  margin-bottom: 0em !important;
+}
+
+.patchnotes li p {
+  vertical-align: top; /* Align list items vertically */
+  display: inline-block;
+  margin-top: 0em !important;
+  margin-bottom: 0em !important;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
