--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-space-grotesk);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -118,5 +117,40 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+.website {
+  display: block;
+}
+
+.pwa {
+  display: none;
+}
+
+/* Media query to show/hide the content based on standalone mode */
+@media (display-mode: standalone) {
+  .website {
+    display: none; /* Hide the content when in standalone mode */
+  }
+
+  .pwachildren {
+    margin-bottom: 0rem;
+  }
+
+  .pwa {
+    display: block;
+  }
+
+  @media (max-width: 630px) {
+    .pwachildren {
+      margin-bottom: 5rem;
+    }
+  }
+}
+
+@media not all and (display-mode: standalone) {
+  .pwa {
+    display: none;
   }
 }
