--- a/app/globals.css
+++ b/app/globals.css
@@ -126,8 +126,12 @@
   }
 }
 
+.glass-ui {
+  @apply rounded-full border [border-color:rgba(209,213,219,0.3)] [background-color:rgba(255,255,255,0.5)] backdrop-blur-lg backdrop-saturate-180 backdrop-filter dark:[border-color:rgba(255,255,255,0.125)] dark:[background-color:rgba(17,25,40,0.5)];
+}
+
 .border {
-  @apply border-black/20 shadow-[inset_1px_1px_0px_rgba(0,0,0,0.3),inset_-1px_-1px_0px_rgba(0,0,0,0.1)] dark:border-white/20 dark:shadow-[inset_1px_1px_0px_rgba(255,255,255,0.3),inset_-1px_-1px_0px_rgba(255,255,255,0.1)];
+  @apply rounded-xl border [border-color:rgba(209,213,219,0.3)] dark:[border-color:rgba(255,255,255,0.125)];
 }
 
 .website {
